# GP_thermal_li-ion

./: .gitignore  README.md  dvc.yaml  make_folders.py  pyproject.toml  requirements.txt  test.ipynb
config/: config.yaml
reports/eval/: .gitignore
reports/figures/: .gitignore
reports/sobol/features/charge/: sensitivity_charge_features.csv
reports/sobol/features/discharge/: sensitivity_discharge_features.csv
reports/sobol/features_individual/charge/: sensitivity_charge_features_individual.csv
reports/sobol/features_individual/discharge/: sensitivity_discharge_features_individual.csv
reports/sobol/hp/charge/mult/: sensitivity_charge_mult_hp.csv
reports/sobol/hp/discharge/add/: sensitivity_discharge_add_hp.csv
reports/sobol/hp/discharge/mixed/: sensitivity_discharge_mixed_hp.csv
reports/sobol/hp/discharge/mult/: sensitivity_discharge_mult_hp.csv
research/: trials.ipynb
src/gpheat/: __init__.py  cli.py  config.py  logger.py  pipeline.py
src/gpheat/data/: loaders.py  slicing.py
src/gpheat/evaluation/: eval_gpy.py  metrics.py
src/gpheat/experiments/: generate_data.py  make_test_sets.py  sensitivity.py
src/gpheat/models/: checkpoints.py  gp.py  gpy_gp.py  kernels.py
src/gpheat/plot/: gpy_results.py  series.py  sobol_plots.py
src/gpheat/sensitivity/: sobol_features.py  sobol_hp.py
src/gpheat/simulate/: pybamm_model.py
src/gpheat/utils/: experiments.py  labels.py  mem.py  mlflow_utils.py  physics.py
