[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpheat"
version = "0.1.0"
description = "Modular codebase for battery GP + PyBaMM experiments"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "pyyaml",
    "tqdm",
    "pybamm",
    "gpytorch",
    "torch",
    "click",
]

[tool.setuptools.packages.find]
where = ["src"]
