[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpheat"
version = "0.1.0"
description = "Modular codebase for battery GP + PyBaMM experiments"
requires-python = ">=3.10"
dependencies = [
    "casadi>=3.6.7,<3.8",
    "pybamm>=24.6",
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "pyyaml",
    "tqdm",
    "gpytorch",
    "torch",
    "click",
    "dvc",
    "mlflow<3",
    "gpy",
    "SALib",
    "tqdm",
    ]

[tool.setuptools.packages.find]
where = ["src"]
